ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - local.mybank.com
      secretName: mybank-tls
  rules:
    - host: local.mybank.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
